k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: house-price-ingress
  namespace: house-price
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: streamlit
                port:
                  number: 8501
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: house-price-api
                port:
                  number: 80
          - path: /mlflow
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
